<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="portfolio_title">My Nanodegree apps !</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone : My Own App </string>

    <string name="spotify_streamer_desc">Stream music !</string>
    <string name="scores_app_desc">Get the latest scores !</string>
    <string name="library_app_desc">Library App </string>
    <string name="build_it_bigger_desc">Build It Bigger !</string>
    <string name="xyz_reader_desc">A Reader app</string>
    <string name="capstone_desc">My Capstone project !</string>

</resources>
