<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    android:clipToPadding="false"
    android:background="#ffdfeaf1">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/portfolio_btn_spacing"
        tools:context="com.fulltoast.portfolio.PortfolioActivityFragment"
        tools:showIn="@layout/activity_portfolio">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/portfolio_title_margin"
            android:gravity="center"
            android:textSize="@dimen/portfolio_title_size"

            android:text="@string/portfolio_title"
            android:id="@+id/textview_portfolio_title"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="@dimen/portfolio_btn_width"
            android:layout_height="@dimen/portfolio_btn_height"
            android:text="@string/spotify_streamer"
            android:id="@+id/btn_spotify_streamer"
            android:background="#AAA" />

        <Button
            android:layout_width="@dimen/portfolio_btn_width"
            android:layout_height="@dimen/portfolio_btn_height"
            android:layout_marginTop="@dimen/portfolio_btn_spacing"
            android:text="@string/scores_app"
            android:id="@+id/btn_scores_app"
            android:background="#AAA" />

        <Button
            android:layout_width="@dimen/portfolio_btn_width"
            android:layout_height="@dimen/portfolio_btn_height"
            android:layout_marginTop="@dimen/portfolio_btn_spacing"
            android:text="@string/library_app"
            android:id="@+id/btn_library_app"
            android:background="#AAA" />

        <Button
            android:layout_width="@dimen/portfolio_btn_width"
            android:layout_height="@dimen/portfolio_btn_height"
            android:layout_marginTop="@dimen/portfolio_btn_spacing"
            android:text="@string/build_it_bigger"
            android:id="@+id/btn_build_it_bigger"
            android:background="#AAA" />

        <Button
            android:layout_width="@dimen/portfolio_btn_width"
            android:layout_height="@dimen/portfolio_btn_height"
            android:layout_marginTop="@dimen/portfolio_btn_spacing"
            android:text="@string/xyz_reader"
            android:id="@+id/btn_xyz_reader"
            android:background="#AAA" />


        <Button
            android:layout_width="@dimen/portfolio_btn_width"
            android:layout_height="@dimen/portfolio_btn_height"
            android:layout_marginTop="@dimen/portfolio_btn_spacing"
            android:text="@string/capstone"
            android:id="@+id/btn_capstone"
            android:background="#dd4814" />

    </LinearLayout>
</ScrollView>